# mini2440

./: Cargo.toml
.cargo/: config.toml
src/: entry.asm  linker.ld  main.rs
src/peripherals/: mod.rs  uart.rs  uart_register.rs
